Implementacoes
