# src/main/java/com/swapi/films/domain/Films.java
@@ -1,0 +1,10 @@
+package com.swapi.films.domain;
+
+import lombok.Data;
+
+import java.util.List;
+
+@Data
+public class Films {
+    List<Film> films;
+}
