# src/main/resources/swagger/spring-swapi.yaml
@@ -1,148 +1,316 @@
-openapi: 3.0.1
+swagger: "2.0"
 info:
-  title: API Star Wars
-  description: API para listar filmes da saga Stars Wars.
-  version: 0.0.1
-  termsOfService: https://swapi.info
+  description: "API Star Wars"
+  version: "1.0.0"
+  title: "API Star Wars 2.0"
+  termsOfService: "http://swagger.io/terms/"
   contact:
-    name: Suporte a Dev
-    email: vladimir_marques_ros@hotmail.com
-    url: https://www.linkedin.com/in/vladimir-marques-da-rosa-120b2341/
+    email: "vladimir_marques_ros@hotmail.com"
   license:
-    name: "Licença GPLv3"
-    url: https://www.gnu.org/licenses/gpl-3.0.html
-externalDocs:
-  description: Documentacao base referencia
-  url: https://swapi.info/api/films
-servers: 
-- url: https://65ff0377df565f1a6144a483.mockapi.io/
-  description: API Mock
+    name: "Apache 2.0"
+    url: "https://www.linkedin.com/in/vladimir-marques-da-rosa-120b2341/"
+host: "swapi.swagger.io"
+basePath: "/v2"
 tags:
- - name: Films
-   description: Tudo sobre seus Filmes
- - name: People
-   description: Tudo sobre seus Persogens
+  - name: "swapi"
+    description: "API para listar filmes da saga Stars Wars"
+    externalDocs:
+      description: "Find out more"
+      url: "http://swagger.io"
+schemes:
+  - "https"
+  - "http"
 paths:
- /Films:
-  get:
-    tags:
-     - Films
-    summary: Listar os filmes da saga
-    responses:
-      200:
-       description: Sucesso
-       content:
-        application/json:
-         schema:
-           type: array
-           items:
-            $ref: "#/components/schemas/Films"
-  put: 
-   tags:
-     - Films
-   summary: Alterar a descrição de um filme
-   description: Alterar a descrição existente pelo id
-   requestBody:
-    content:
-     application/json:
-      schema:
-       $ref: "#/components/schemas/AtualizarFilmDto"
-   responses:
-    '200':
-      description: Sucesso
-      content:
-        application/json:
+  /films:
+    get:
+      tags:
+        - "swapi"
+      summary: "List all films"
+      description: ""
+      responses:
+        "200":
+          description: "successful operation"
           schema:
-                $ref: "#/components/schemas/Film"          
-    '400':
-      description: ID Invalido
-    '404':
-      description: Filme nao encontrado
-    '422':
-      description: Validation exception
-       
- /Films/{epsisode_id}:
-  get:
-    tags:
-     - Films
-    summary: Exibir detalhes de um filme
-    operationId: getEpsisodeID
-    parameters: 
-    - name: epsisode_id
-      in: path
-      description: ID do film
-      required: true
-      schema: 
-       type: integer
-       format: int64
-    responses:
-     '200':
-       description: Sucesso
-       content:
-        application/json:
-         schema:
-          $ref: '#/components/schemas/Film'
-     '400':
-      description:  ID Invalido
-     '404':
-      description: Filme nao encontrado
+            type: "array"
+            items:
+              $ref: "#/definitions/Films"
+        "404":
+          description: "Film not found"
+    post:
+      tags:
+        - "swapi"
+      summary: "Add a new film"
+      description: ""
+      operationId: "filmId"
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "Film object that needs to be added to the galery"
+          required: true
+          schema:
+            $ref: "#/definitions/Films"
+      responses:
+        "400":
+          description: Invalid input
+        "422":
+          description: Validation exception
 
-components:
-  schemas:
-    Films:
-     type: array
-     items: 
-       $ref: "#/components/schemas/Film"
-    Film:
-     type: object
-     properties:
+    put:
+      tags:
+        - "swapi"
+      summary: "Update an existing film"
+      description: ""
+      operationId: "filmsId"
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "Film object that needs to be added to the galery"
+          required: true
+          schema:
+            $ref: "#/definitions/Films"
+      responses:
+        "400":
+          description: "Invalid ID supplied"
+        "404":
+          description: "Film not found"
+        "422":
+          description: "Validation exception"
+
+  /films/findByStatus:
+    get:
+      tags:
+        - "swapi"
+      summary: "Finds Film by status"
+      description: "Multiple status values can be provided with comma separated strings"
+      operationId: "findByStatus"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "status"
+          in: "query"
+          description: "Status values that need to be considered for filter"
+          required: true
+          type: "array"
+          items:
+            type: "string"
+            enum:
+              - "available"
+              - "pending"
+              - "sold"
+            default: "available"
+          collectionFormat: "multi"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Films"
+        "400":
+          description: "Invalid status value"
+
+  /films/findByTags:
+    get:
+      tags:
+        - "swapi"
+      summary: "Finds Film by tags"
+      description: "Multiple tags can be provided with comma separated strings. Use tag1, tag2, tag3 for testing."
+      operationId: "findByTags"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "tags"
+          in: "query"
+          description: "Tags to filter by"
+          required: true
+          type: "array"
+          items:
+            type: "string"
+          collectionFormat: "multi"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Films"
+        "400":
+          description: "Invalid tag value"
+
+  /films/{filmId}:
+    get:
+      tags:
+        - "swapi"
+      summary: "Find film by ID"
+      description: "Returns a single film"
+      operationId: "getFilmId"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "filmId"
+          in: "path"
+          description: "ID of film to return"
+          required: true
+          type: "integer"
+          format: "int64"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Films"
+        "400":
+          description: "Invalid ID supplied"
+        "404":
+          description: "Pet not found"
+
+    post:
+      tags:
+        - "swapi"
+      summary: "Updates a pet in the store with form data"
+      description: ""
+      operationId: "updatePetWithForm"
+      consumes:
+        - "application/x-www-form-urlencoded"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "filmId"
+          in: "path"
+          description: "ID of pet that needs to be updated"
+          required: true
+          type: "integer"
+          format: "int64"
+        - name: "name"
+          in: "formData"
+          description: "Updated name of the pet"
+          required: false
+          type: "string"
+        - name: "status"
+          in: "formData"
+          description: "Updated status of the pet"
+          required: false
+          type: "string"
+      responses:
+        "400":
+          description: Invalid input
+        "422":
+          description: Validation exception
+    delete:
+      tags:
+        - "swapi"
+      summary: "Deletes a Film"
+      description: ""
+      operationId: "deleteId"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "filmId"
+          in: "path"
+          description: "Film id to delete"
+          required: true
+          type: "integer"
+          format: "int64"
+      responses:
+        "400":
+          description: "Invalid ID supplied"
+        "404":
+          description: "Film not found"
+definitions:
+  Films:
+    type: object
+    properties:
+      films:
+        type: "array"
+        items:
+          $ref: '#/definitions/Film'
+  Film:
+    type: object
+    properties:
       episode_id:
-       type: integer
-      title:
-       type: string
+        type: integer
+      titulo:
+        type: string
       opening_crawl:
-       type: string
+        type: string
       release_date:
-       type: string
+        type: string
       characters:
-       type: array
-       items:
-        type: object
+        type: "array"
+        items:
+          $ref: '#/definitions/Character'
       planets:
-       type: array
-       items:
-        type: object
+        type: "array"
+        items:
+          $ref: '#/definitions/Planet'
       starships:
-       type: array
-       items:
-        type: object
-      vehicles:
-       type: array
-       items:
-        type: object
+        type: "array"
+        items:
+          $ref: '#/definitions/Starship'
+      vehicules:
+        type: "array"
+        items:
+          $ref: '#/definitions/Vehicle'
       species:
-       type: array
-       items:
-        type: object
+        type: "array"
+        items:
+          $ref: '#/definitions/Specie'
       created:
-       type: string
-       format: date-time
+        type: string
+        format: date-time
       edited:
-       type: string
-       format: date-time
+        type: string
+        format: date-time
       url:
-       type: string
-       format: uri
-       example: "https://swapi.info/api/films/1"
-    AtualizarFilmDto:
-     type: object
-     properties:
-      episode_id:
-       type: integer
-      opening_crawl:
-       type: string
-     
-    
-    
-    
-    
+        type: string
+        format: uri
+        example: "https://swapi.info/api/films/1"
+
+
+  Vehicle:
+    type: object
+    properties:
+      vehicules:
+        type: string
+
+  Specie:
+    type: object
+    properties:
+      specie:
+        type: string
+
+  Starship:
+    type: object
+    properties:
+      starship:
+        type: string
+
+
+  Planet:
+    type: object
+    properties:
+      planet:
+        type: string
+
+
+  Character:
+    type: object
+    properties:
+      character:
+        type: string
+
+  Tag:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      name:
+        type: "string"
